--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,7 +1,3 @@
-.single {
-  display: inline-block;
-}
-
 .Black {
   background-color: black;
   color: white;
@@ -14,6 +10,7 @@
   border-style: solid;
   border-color: white;
   border-width: 2px;
+  cursor: pointer;
 }
 
 .White {
@@ -28,8 +25,17 @@
   border-style: solid;
   border-color: black;
   border-width: 2px;
+  cursor: pointer;
 }
 
 .cardContents {
   padding: 25px 20px;
 }
+
+.true {
+  border-color: green;
+}
+
+/*.active{
+  background-color: #5cb85c;
+}*/
