--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,3 +1,19 @@
+body {
+  background-color: #eff5f5;
+}
+
+h1 {
+  color: black;
+  font-family: sans-serif;
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 64px;
+  margin: 0 0 0;
+  padding: 20px 30px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
 .Black {
   background-color: black;
   color: white;
@@ -11,6 +27,8 @@
   border-color: white;
   border-width: 2px;
   cursor: pointer;
+  margin-bottom: 5px;
+  margin-right: 5px;
 }
 
 .White {
@@ -26,6 +44,8 @@
   border-color: black;
   border-width: 2px;
   cursor: pointer;
+  margin-bottom: 5px;
+  margin-right: 5px;
 }
 
 .cardContents {
@@ -34,8 +54,25 @@
 
 .true {
   border-color: green;
+  border-width: 5px;
 }
 
-/*.active{
-  background-color: #5cb85c;
-}*/
+button {
+  background-color: #e7e7e7;
+  color: black;
+  border: none;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  border-color: black;
+  border-style: solid;
+  border-radius: 5px;
+}
+
+.cardsPicked {
+  margin-left: 100px;
+}
